--- a/client/src/pages/SavedArticles/SavedArticles.css
+++ b/client/src/pages/SavedArticles/SavedArticles.css
@@ -1,8 +1,8 @@
-
 .card {
     padding: 10px;
     height: 200px;
     margin-bottom: 30px;
+    box-shadow: 3px 2px 2px rgb(68, 66, 66);
 }
 
 .card-text {
@@ -11,8 +11,7 @@
     text-overflow: ellipsis;
 }
 
-.saved-article-button {
+.article-buttons {
     position: absolute;
-    bottom: 10%;
-    margin-left: 32%;
+    bottom: 5%;
 }
